[fix] fix typo and...